# MaPie-LoraWAN-Soil-Moisture

./: readme.md
soil_csdk/: CMakeLists.txt  aht10.c  aht10.h  all_head.h  main.c  set_path.sh
soil_python/: at_command.py  main.py  pico_aht10.py  pwm_test.py  soil.py
